implementation of the most of the navigation_handler which will tell the snowplow how to drive based on points

--- a/Autonomous Snowplow 2019/Autonomous Snowplow 2019.vcxproj.filters
+++ b/Autonomous Snowplow 2019/Autonomous Snowplow 2019.vcxproj.filters
@@ -21,16 +21,19 @@
     <ClCompile Include="lidar_handler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SerialPort.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="local_handler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="orientation_handler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Grid.cpp">
+    <ClCompile Include="serial_port.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="grid_handler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="navigation_handler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -51,6 +54,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="snowplow_type.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="navigation_handler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="macro_defs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
