--- a/Autonomous Snowplow 2019/Autonomous Snowplow 2019.vcxproj
+++ b/Autonomous Snowplow 2019/Autonomous Snowplow 2019.vcxproj
@@ -110,16 +110,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Grid.cpp" />
+    <ClCompile Include="grid_handler.cpp" />
     <ClCompile Include="lidar_handler.cpp" />
     <ClCompile Include="local_handler.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="navigation_handler.cpp" />
     <ClCompile Include="orientation_handler.cpp" />
-    <ClCompile Include="SerialPort.cpp" />
+    <ClCompile Include="serial_port.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Grid.h" />
     <ClInclude Include="lidar_handler.h" />
+    <ClInclude Include="macro_defs.h" />
+    <ClInclude Include="navigation_handler.h" />
     <ClInclude Include="snowplow_type.h" />
     <ClInclude Include="local_handler.h" />
     <ClInclude Include="orientation_handler.h" />
