--- a/Autonomous Snowplow 2019/Autonomous Snowplow 2019.vcxproj.filters
+++ b/Autonomous Snowplow 2019/Autonomous Snowplow 2019.vcxproj.filters
@@ -80,5 +80,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="..\object_detector.svm">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
